// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton it should render a simple split button 1`] = `
<div
  className="woocommerce-split-button"
>
  <button
    className="components-button woocommerce-split-button__main-action"
    onClick={[Function]}
    type="button"
  />
  <div
    className="woocommerce-split-button__menu"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      className="components-button components-icon-button woocommerce-split-button__menu-toggle"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="dashicon dashicons-arrow-down-alt2"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 6l5 5 5-5 2 1-7 7-7-7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SplitButton it should render a split button with Foo as main label 1`] = `
<div
  className="woocommerce-split-button has-label"
>
  <button
    className="components-button woocommerce-split-button__main-action"
    onClick={[Function]}
    type="button"
  >
    Foo
  </button>
  <div
    className="woocommerce-split-button__menu"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      className="components-button components-icon-button woocommerce-split-button__menu-toggle"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="dashicon dashicons-arrow-down-alt2"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 6l5 5 5-5 2 1-7 7-7-7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SplitButton it should render a split button with a menu label 1`] = `
<div
  className="woocommerce-split-button"
>
  <button
    className="components-button woocommerce-split-button__main-action"
    onClick={[Function]}
    type="button"
  />
  <div
    className="woocommerce-split-button__menu"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Select an action"
      className="components-button components-icon-button woocommerce-split-button__menu-toggle"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="dashicon dashicons-arrow-down-alt2"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 6l5 5 5-5 2 1-7 7-7-7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SplitButton it should render a split button with isPrimary theme 1`] = `
<div
  className="woocommerce-split-button is-primary"
>
  <button
    className="components-button woocommerce-split-button__main-action"
    onClick={[Function]}
    type="button"
  />
  <div
    className="woocommerce-split-button__menu"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      className="components-button components-icon-button woocommerce-split-button__menu-toggle"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="dashicon dashicons-arrow-down-alt2"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 6l5 5 5-5 2 1-7 7-7-7z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`SplitButton it should render a split button with pencil as main button 1`] = `
<div
  className="woocommerce-split-button"
>
  <button
    className="components-button components-icon-button woocommerce-split-button__main-action"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="gridicon gridicons-pencil"
      height={24}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M13 6l5 5-9.507 9.507c-.686-.686-.69-1.794-.012-2.485l-.002-.003c-.69.676-1.8.673-2.485-.013-.677-.677-.686-1.762-.036-2.455l-.008-.008c-.694.65-1.78.64-2.456-.036L13 6zm7.586-.414l-2.172-2.172c-.78-.78-2.047-.78-2.828 0L14 5l5 5 1.586-1.586c.78-.78.78-2.047 0-2.828zM3 18v3h3c0-1.657-1.343-3-3-3z"
        />
      </g>
    </svg>
  </button>
  <div
    className="woocommerce-split-button__menu"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      className="components-button components-icon-button woocommerce-split-button__menu-toggle"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="dashicon dashicons-arrow-down-alt2"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 6l5 5 5-5 2 1-7 7-7-7z"
        />
      </svg>
    </button>
  </div>
</div>
`;
